--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,3 +21,8 @@ bind -r ^k resizep -U 10 # 绑定Ctrl+k为往↑调整面板边缘10个单元格
 bind -r ^j resizep -D 10 # 绑定Ctrl+j为往↓调整面板边缘10个单元格
 bind -r ^h resizep -L 10 # 绑定Ctrl+h为往←调整面板边缘10个单元格
 bind -r ^l resizep -R 10 # 绑定Ctrl+l为往→调整面板边缘10个单元格
+
+# move tmux copy buffer into x clipboard, this requires xclip is installed
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+# move x clipboard into tmux paste buffer
+bind C-v run "tmux set-buffer  \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
